--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ ul {
   padding-top: 24px;
   padding-bottom: 24px;
   align-items: center;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header .container {
   display: flex;
@@ -96,6 +99,7 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  position: relative;
 }
 
 .nav-list a:hover {
@@ -114,6 +118,16 @@ ul {
   text-decoration: none;
   letter-spacing: normal;
 }
+.nav-list .link::after {
+  display: block;
+  position: absolute;
+  bottom: -1px;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  content: '';
+  background-color: #404bbf;
+}
 
 .address-ul {
   display: flex;
@@ -121,6 +135,7 @@ ul {
 }
 
 .address .link {
+  font-family: 'Roboto', sans-serif;
   color: #434455;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -134,11 +149,20 @@ ul {
   color: #404bbf;
 }
 
-/*----------------- section-1 ----------------*/
+/*----------------- section-1 hero ----------------*/
 
 .hero-section {
-  padding: 188px 0;
   background-color: #2e2f42;
+  padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #2e2f42;
+  background-position: center;
 }
 
 .hero-section .container {
@@ -352,7 +376,7 @@ ul {
 
 .footer-link-logo {
   display: inline-block;
-  margin-right: 76px;
+  /*margin-right: 76px;*/
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
