--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,9 @@ ul {
 /*----------------- section-1 hero ----------------*/
 
 .hero-section {
+  max-width: 1158px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -197,6 +200,7 @@ ul {
   margin-top: 48px;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
@@ -207,10 +211,19 @@ ul {
   background-color: #404bbf;
 }
 
-/*-- section-2 --*/
+/*-- section-2 our advantages --*/
 
-.advantages-title {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .advantages-section {
@@ -248,7 +261,27 @@ ul {
   margin-bottom: 8px;
 }
 
-/*section-3*/
+.advantages-pict-conteiner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
+}
+
+.advantages-list-icon {
+  border: 1px solid #8e8f99;
+  background: #f4f4fd;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  padding: 24px 100px;
+}
+
+/* ####################### our team section-3 ########### */
 
 .our-team {
   padding: 120px 0;
