--- a/css/styles.css
+++ b/css/styles.css
@@ -317,16 +317,17 @@ ul {
 }
 
 .name-profession {
+  border-radius: 0px 0px 4px 4px;
   padding: 32px 0;
-}
-
-.our-team .title-li {
-  margin-bottom: 8px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .our-team .title-li,
 .our-team .text {
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .title-li {
@@ -345,7 +346,31 @@ ul {
   font-family: Roboto, sans-serif;
 }
 
-/*-- section-4 --*/
+.our-team-social-list-link {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.our-team-social-link-a {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  justify-content: center;
+  align-items: center;
+}
+
+.our-team-social-link-a:hover {
+  background-color: #31d0aa;
+}
+
+.our-team-social-link-a:focus {
+  background-color: #31d0aa;
+}
+
+/*-- ********************our portfolio    section-4 ******--*/
 
 .portfolio {
   padding: 120px 0 120px;
@@ -409,7 +434,7 @@ ul {
 
 .footer-link-logo {
   display: inline-block;
-  /*margin-right: 76px;*/
+
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -432,3 +457,16 @@ ul {
 .title-li {
   font-weight: 500;
 }
+
+/**************  DELETE AFTER CHECK  ******************/
+.footer-social-media,
+.footer .container,
+.logo-disp {
+  border: 2px solid #ffffff;
+}
+
+/*      find  it
+.our-team-social-links {
+  width: 16px;
+  height: 16px;
+}         */
