--- a/css/styles.css
+++ b/css/styles.css
@@ -387,6 +387,18 @@ ul {
 
 .portfolio-list .list-li {
   width: calc((100% - 48px) / 3);
+  border: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list .list-li:hover p {
+  transform: translateY(0%);
+}
+.app-pictures {
+  position: relative;
+  overflow: hidden;
 }
 
 .app-description {
@@ -399,7 +411,7 @@ ul {
   margin-bottom: 8px;
 }
 
-/*--footer--*/
+/*--*************************** footer *****************************--*/
 
 .footer {
   padding: 100px 0;
@@ -456,6 +468,14 @@ ul {
 .button,
 .title-li {
   font-weight: 500;
+}
+
+.footer-social-list-link-a:hover {
+  background-color: #31d0aa;
+}
+
+.footer-social-list-link-a:focus {
+  background-color: #31d0aa;
 }
 
 /**************  DELETE AFTER CHECK  ******************/
